# Elrond

./: .gitignore  README.md  pyproject.toml  run_formatter.py  run_nwb_formatter.py  run_pipeline.py  settings.py  test_nwb.py
Additional_files/: SANDI_voice_playground.py  basic_metadata.yml  conda_env.yml  fix_file_open_limit_linux  generate_3visual_sequence_schema.py  generate_multi_context_schema.py  generate_visual_sequence_schema.py  generate_visual_trial_schema.py  generate_vr_trial_schema.py  move_files_to_dandi_dir.py
Additional_files/Bonsai_tracking_script/: HDtrackingcoverageRG.bonsai  HDtrackingcoverageRG_save_video.bonsai  HDtrackingcoverageRG_save_video_hist.bonsai
Additional_files/open_field_optogenetics/: open_field_optogenetics.ino
Documentation/: user_guide_for_running_analyss.md
Helpers/: OpenEphys.py  array_utility.py  file_utility.py  math_utility.py  metadata_extraction.py  open_ephys_IO.py  plot_utility.py  spikeinterfaceHelper.py  test_kuiper.py  upload_download.py
Helpers/Eddie_scripts/: eddie_pipeline.py  eddie_pipeline.sh  eddie_stagein.py  eddie_stagein.sh  eddie_stageout.py  eddie_stageout.sh
Notebooks/: Make_nwb_files.ipynb  Make_template_yaml_file.ipynb  conversion.ipynb  repair_gaps.ipynb  summary_plots_of_vr_of.ipynb
P0_Format/: format.py  re_format_parameter_file.py  vr_extract_behaviour_from_ADC_channels.py
P0_Format/NWB_Formatter/: nwb_format.py
P1_SpikeSort/: auto_curate.py  openphys.py  preprocess.py  probe.py  spikesort.py  waveforms.py
P2_PostProcess/: postprocess.py
P2_PostProcess/ABOVisualCoding/: behaviour_from_blender.py  visual_coding.py
P2_PostProcess/OpenField/: compare_first_and_second_half.py  of.py  open_field_firing_maps.py  open_field_head_direction.py  open_field_make_plots.py  open_field_spatial_data.py  open_field_sync_data.py  plotting.py  post_process_sorted_data.py  rate_map.py  spatial_data.py  spatial_firing.py  speed.py
P2_PostProcess/Opto/: make_opto_plots.py  post_process_sorted_data_opto.py
P2_PostProcess/Shared/: lfp.py  make_plots.py  plot_spike_properties.py  plotting.py  shared.py  time_sync.py  traces.py
P2_PostProcess/Sleep/: post_process_sorted_data_sleep.py  sleep.py
P2_PostProcess/VirtualReality/: behaviour_from_ADC_channels.py  (+13 more)
P3_CurrentAnalysis/: automerge.ipynb  basic_lomb_scargle_estimator.ipynb  basic_lomb_scargle_estimator.py  cross_correlogram.py  ldm.py  ldm_visual_task.py  playground.py  plot_basic_lomb_scargle_estimator.ipynb  plot_curation_metrics.ipynb  plot_grid_cell_ldm_space.ipynb  plot_grid_cells.ipynb  plot_lfp_across_shank.ipynb  plot_ramp_cells.ipynb  plot_spatial_autocorr.ipynb  plot_spatial_cells_in_brain.ipynb  plot_spiking_spectra_across_shank.ipynb  ramp_score.py  spike_raster_multiarea.py  vr_behavioural_summary.py
run_scripts/: chris_pipeline.py  create_param_yml.py  eddie_get_filenames.py  nohup.out  run_convert_ADC_to_behaviour.py  run_nwb_formatter.py  run_pipeline.py  run_pipeline_chris_eddie.py  run_pipeline_eddie.py  run_pipeline_eleanor.py  run_pipeline_eleanor_all_mice.py  run_pipeline_on_eddie.py  run_scripts_eddie.py  sorting_pipeline.py  test_script.py  test_waveform_view.ipynb  trace_view.ipynb
test_scripts/: test_nwb.py  test_recording.py
(+237 files in other folders)
