[project]
name = "Elrond"
version = "0.0.1"
authors = [
  { name="Harry Clark", email="harry@clark.com" },
]
description = "Python toolkit for electrophysiological neural data"
readme = "README.md"
requires-python = ">=3.9,<4.0"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: OS Independent"
]


dependencies = [
    "pyyaml",
    "numpy",
    "spikeinterface",
    "neuroconv",
    "matplotlib",
    "astropy",
    "joblib",
    "opencv-python",
    "statsmodels",
    "scikit-image",
    "cmocean",
    "pydantic>2.4.2"
]

[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["Elrond*"]
namespaces = false
exclude = ["spikeinterface.*.tests"]

[tool.black]
line-length = 120

[project.urls]
homepage = "https://github.com/hdclark94/elrond"
repository = "https://github.com/hdclark94/elrond"


[project.optional-dependencies]

sorting = [
]

postprocessing = [
]

full = [
    "neo@git+https://github.com/NeuralEnsemble/python-neo.git",
    "torch==2.5.0",
    "torchvision==0.20.0",
    "deeplabcut@git+https://github.com/DeepLabCut/DeepLabCut.git@pytorch_dlc#egg=deeplabcut[wandb]",
    "pyyaml",
    "numpy",
    "spikeinterface",
    "neuroconv",
    "matplotlib",
    "astropy",
    "joblib",
    "opencv-python",
    "statsmodels",
    "scikit-image",
    "cmocean",
    "herdingspikes",
    "kilosort==4.0.16",
    "numba"
]

